syntax = "proto3";

option csharp_namespace = "gRPCServer.Protos";

package Quiz;
service Maths {
  rpc AskQuestion (QuestionRequest) returns (stream AnswerReply);
  rpc SolveOperation (QuestionRequest) returns (AnswerReply);
}

message QuestionRequest {
  repeated string texts = 1;
}

message AnswerReply {
  string question = 1;
  double answer=2;
}